hphp/hack/test/typecheck/method_redeclaration_covariant_return_error.php.exp
File "method_redeclaration_covariant_return_error.php", line 12, characters 19-19:
Member f has the wrong type (Typing[4341])
File "method_redeclaration_covariant_return_error.php", line 12, characters 30-32:
Expected int
File "method_redeclaration_covariant_return_error.php", line 4, characters 30-32:
But got num
